Created design for messages items, add mapper

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="golden_amber">#E7B10A</color>
     <color name="olive_drab">#898121</color>
     <color name="dark_khaki">#4C4B16</color>
+    <color name="light_black">#2C2A27</color>
 </resources>
